--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
-<h1> Th is a test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Praisol - Web Services</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: #fff;
+        }
+
+        header {
+            background-color: #ff5722;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            color: #fff;
+        }
+
+        section {
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        section h2 {
+            color: #ff5722;
+            margin-bottom: 20px;
+        }
+
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+            justify-items: center;
+        }
+
+        .card {
+            background-color: #333;
+            color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            max-width: 300px;
+            padding: 20px;
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card h3 {
+            color: #ff5722;
+            margin-bottom: 15px;
+        }
+
+        .card p {
+            font-size: 1rem;
+            margin-bottom: 20px;
+        }
+
+        .card button {
+            background-color: #ff5722;
+            border: none;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .card button:hover {
+            background-color: #e64a19;
+        }
+
+        footer {
+            background-color: #222;
+            padding: 20px;
+            text-align: center;
+            color: #888;
+            font-size: 0.9rem;
+        }
+
+        @media (max-width: 600px) {
+            section {
+                padding: 20px;
+            }
+
+            .card {
+                padding: 15px;
+            }
+
+            .card h3 {
+                font-size: 1.2rem;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Welcome to Praisol</h1>
+    <p>Your trusted partner for static web development services.</p>
+</header>
+
+<section>
+    <h2>Our Service Packages</h2>
+    <div class="card-container">
+        <!-- Package 1 -->
+        <div class="card">
+            <h3>Basic Plan</h3>
+            <p>A simple, one-page website for small businesses and personal use.</p>
+            <p><strong>Price:</strong> $50</p>
+            <button>Learn More</button>
+        </div>
+        <!-- Package 2 -->
+        <div class="card">
+            <h3>Standard Plan</h3>
+            <p>Multi-page website with contact forms and basic SEO.</p>
+            <p><strong>Price:</strong> $150</p>
+            <button>Learn More</button>
+        </div>
+        <!-- Package 3 -->
+        <div class="card">
+            <h3>Premium Plan</h3>
+            <p>Full website with responsive design, SEO, and analytics integration.</p>
+            <p><strong>Price:</strong> $300</p>
+            <button>Learn More</button>
+        </div>
+        <!-- Package 4 -->
+        <div class="card">
+            <h3>Professional Plan</h3>
+            <p>Custom-built website tailored to your business needs with premium features.</p>
+            <p><strong>Price:</strong> $500</p>
+            <button>Learn More</button>
+        </div>
+        <!-- Package 5 -->
+        <div class="card">
+            <h3>Enterprise Plan</h3>
+            <p>Enterprise-grade solutions with dedicated support and hosting management.</p>
+            <p><strong>Price:</strong> Contact for pricing</p>
+            <button>Learn More</button>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2024 Praisol. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
