--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="wK39eZARyYCd-YYlsCUYFobNko0Jjmi5jmxDN1LS5v4" />
     <title>Praisol - Web Services</title>
     <style>
         * {
