--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Praisol Agency - Custom Web Development Services</title>
+    <meta name="description" content="Praisol Agency offers professional web development services for small businesses. Get custom, responsive websites at affordable prices.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
