--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Praisol Agency - Custom Web Development Services</title>
     <meta name="description" content="Praisol Agency offers professional web development services for small businesses. Get custom, responsive websites at affordable prices.">
+    <meta name="description" content="Praisol Agency offers custom web development services for small businesses with packages including SEO, responsive design, and analytics integration.">
+    <meta name="author" content="Praisol Agency">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
