--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <a href="#">Home</a>
     </div>
     <div class="right">
+        <a href="#">Demos</a>
         <a href="#">Services</a>
         <a href="#">Profile</a>
     </div>
@@ -165,7 +166,7 @@
 
 <header>
     <h1>Welcome to Praisol</h1>
-    <p>Your trusted partner for static web development services.</p>
+    <p>Your trusted partner for Web services & Internet Solutions.</p>
 </header>
 
 <section>
