--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Praisol Agency offers professional web development services for small businesses. Get custom, responsive websites at affordable prices.">
     <meta name="description" content="Praisol Agency offers custom web development services for small businesses with packages including SEO, responsive design, and analytics integration.">
     <meta name="author" content="Praisol Agency">
-
+    <meta name="msvalidate.01" content="613B2ACCCB56F6FA4C4CE433500E9EB5" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
