--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
     <title>Praisol Agency - Custom Web Development Services</title>
+
+
+
+    <meta name="description" content="Praisol Agency offers custom web development services for small businesses with packages including SEO, responsive design, and analytics integration.">
+<meta name="msvalidate.01" content="613B2ACCCB56F6FA4C4CE433500E9EB5" />
+
+<meta name="google-site-verification" content="wK39eZARyYCd-YYlsCUYFobNko0Jjmi5jmxDN1LS5v4" />
+<title>Praisol - Web Services</title>
+
+
+
+    
     <meta name="description" content="Praisol Agency offers professional web development services for small businesses. Get custom, responsive websites at affordable prices.">
     <meta name="author" content="Praisol Agency">
     <meta charset="UTF-8">
