--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-style:'Tahoma'; margin-left:6px; margin-top: 9px; color:#ff914d; text-decoration:none"> PRAISOl</h1>
         <a style="margin-top:2px;" onclick="closeSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ff914d"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a>
     </div>
-        <a href="indexreal.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="demos.html">Demos</a>
         <a href="services.html">Services</a>
         <a href="profile.html">Profile</a>
@@ -54,7 +54,7 @@
                 <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-style:'Tahoma'; margin-left:6px;  color:#ff914d; text-decoration:none; font-size:3.2rem"> PRAISOl</h1>
     </div>
     <div class="right" id="nav-links">
-        <a href="indexreal.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="demos.html">Demos</a>
         <a href="services.html">Services</a>
         <a href="profile.html">Profile</a>
