--- a/index.html
+++ b/index.html
@@ -75,31 +75,31 @@
         <div class="card">
             <h3>Basic Plan</h3>
             <p>A simple, three-page website for small businesses and personal use.</p>
-            <p style="color:#ff914d; "><strong>Price:</strong> ₹ 1999</p>
+            <p ><strong>Price:</strong> ₹ 1999</p>
             <button>Learn More</button>
         </div>
         <div class="card">
             <h3>Standard Plan</h3>
             <p>Multi-page website with contact forms and basic SEO.</p>
-            <p style="color:#ff914d;><strong>Price:</strong> ₹ 6999</p>
+            <p ><strong>Price:</strong> ₹ 6999</p>
             <button>Learn More</button>
         </div>
         <div class="card">
             <h3>Premium Plan</h3>
             <p>Full website with responsive design, SEO, and analytics integration.</p>
-            <p style="color:#ff914d;><strong>Price:</strong> ₹ 14999</p>
+            <p ><strong>Price:</strong> ₹ 14999</p>
             <button>Learn More</button>
         </div>
         <div class="card">
             <h3>Professional Plan</h3>
             <p>Custom-built website tailored to your business needs with premium features.</p>
-            <p style="color:#ff914d;><strong>Price:</strong> ₹ 24999</p>
+            <p ><strong>Price:</strong> ₹ 24999</p>
             <button>Learn More</button>
         </div>
         <div class="card">
             <h3>Enterprise Plan</h3>
             <p>Enterprise-grade solutions with dedicated support and hosting management.</p>
-            <p style="color:#ff914d;><strong>Price:</strong> Contact for pricing</p>
+            <p ><strong>Price:</strong> Contact for pricing</p>
             <button>Learn More</button>
         </div>
     </div>
